[package]
name = "model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# internal deps
helper.workspace = true
helper-macro.workspace = true

# external deps
borsh.workspace = true
bs58.workspace = true
derive_more.workspace = true
ed25519-dalek = { workspace = true, features = ["hazmat"] }
rand = { workspace = true }
secp256k1 = { workspace = true, features = ["recovery", "alloc"] }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha2.workspace = true
tokio = { workspace = true, default-features = false, features = ["time", "sync"] }
time = { workspace = true, features = ["formatting", "parsing"] }
thiserror.workspace = true

[dev-dependencies]

