[package]
name = "chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# internal deps
helper.workspace = true
model.workspace = true

# external deps
serde.workspace = true
time.workspace = true
tracing.workspace = true
