[package]
name = "helper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
prometheus.workspace = true
thiserror.workspace = true
